Update search system, add retail list update to SearchService.java